--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <li><a href="puzzle.html">puzzle</a></li>
       <li><a href="flappy_bird.html">flappy bird</a></li>
       <li><a href="url-taker-to.html">url taker to</a></li>
+      <li><a href="roblox.html">Roblox-like game</a></li>
     </ul>
 
   </body>
