--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <body style="background-color: lightblue;">
+    <!-- Your content here -->
+</body>
+
   <head>
     <title>BenDaKing | Home</title>
     <style>
@@ -33,6 +37,8 @@
       <li><a href="flappy_bird.html">flappy bird</a></li>
       <li><a href="url-taker-to.html">url taker to</a></li>
       <li><a href="roblox.html">Roblox-like game</a></li>
+</body>
+
     </ul>
 
   </body>
