--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <body style="background-color: lightblue;">
+  <body style="background-color: #FF6000;">
     <!-- Your content here -->
 </body>
 
