--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <li><a href="flappy_bird.html">flappy bird</a></li>
       <li><a href="url-taker-to.html">url taker to</a></li>
       <li><a href="roblox.html">Roblox-like game</a></li>
+      <li><a href="geoFS.html">GeoFS like game</a></li>
 </body>
 
     </ul>
