--- a/geoFS.html
+++ b/geoFS.html
@@ -1,34 +1,48 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enhanced Flight Simulator</title>
+  <title>Advanced Flight Simulator</title>
   <style>
-    body { margin: 0; overflow: hidden; }
+    body { 
+      margin: 0; 
+      overflow: hidden; 
+      background-color: #000; 
+    }
     canvas { display: block; }
+    
+    /* Responsive HUD */
     #hud {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      top: 5%;
+      left: 5%;
       color: white;
       font-family: Arial, sans-serif;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.8);
       padding: 10px;
       border-radius: 5px;
+      font-size: 14px;
+      z-index: 10;
     }
+
     #controls {
       position: absolute;
-      bottom: 20px;
+      bottom: 10%;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
-      gap: 20px;
+      flex-direction: row;
+      justify-content: space-between;
+      width: 80%;
+      z-index: 10;
     }
+
     .button {
       width: 60px;
       height: 60px;
-      background: rgba(0, 0, 0, 0.5);
+      background: rgba(0, 0, 0, 0.6);
       border: 2px solid white;
       border-radius: 50%;
       color: white;
@@ -37,194 +51,179 @@
       justify-content: center;
       align-items: center;
       cursor: pointer;
+      touch-action: manipulation;
+    }
+
+    /* iPad-friendly button layout */
+    @media (max-width: 768px) {
+      #controls {
+        flex-direction: column;
+        gap: 10px;
+        bottom: 15%;
+      }
+
+      #hud {
+        font-size: 12px;
+        top: 5%;
+        left: 5%;
+      }
+
+      .button {
+        width: 50px;
+        height: 50px;
+        font-size: 16px;
+      }
     }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three/examples/js/loaders/GLTFLoader.js"></script>
 </head>
 <body>
-<div id="hud">
-  <div>Speed: <span id="speed">0</span></div>
-  <div>Altitude: <span id="altitude">0</span></div>
-  <div>Pitch: <span id="pitch">0</span></div>
-  <div>Roll: <span id="roll">0</span></div>
-  <div>Yaw: <span id="yaw">0</span></div>
-</div>
-<div id="controls">
-  <div class="button" id="pitch-up">↑</div>
-  <div class="button" id="pitch-down">↓</div>
-  <div class="button" id="roll-left">←</div>
-  <div class="button" id="roll-right">→</div>
-</div>
+  <div id="hud">
+    <div>Speed: <span id="speed">0</span> km/h</div>
+    <div>Altitude: <span id="altitude">0</span> m</div>
+    <div>Pitch: <span id="pitch">0</span>°</div>
+    <div>Roll: <span id="roll">0</span>°</div>
+    <div>Yaw: <span id="yaw">0</span>°</div>
+    <div>Fuel: <span id="fuel">100%</span></div>
+    <div>Engine Temp: <span id="engine-temp">N/A</span></div>
+  </div>
 
-<script>
-// Scene setup
-const scene = new THREE.Scene();
-const camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 5000);
-const renderer = new THREE.WebGLRenderer();
-renderer.setSize(window.innerWidth, window.innerHeight);
-document.body.appendChild(renderer.domElement);
+  <div id="controls">
+    <div class="button" id="pitch-up">↑</div>
+    <div class="button" id="pitch-down">↓</div>
+    <div class="button" id="roll-left">←</div>
+    <div class="button" id="roll-right">→</div>
+    <div class="button" id="thrust-up">↑ Thrust</div>
+    <div class="button" id="thrust-down">↓ Thrust</div>
+  </div>
 
-// Skybox with dynamic environment (e.g., dynamic clouds or sunset effects)
-const skyboxLoader = new THREE.CubeTextureLoader();
-const skybox = skyboxLoader.load([
-  'https://example.com/sky_px.jpg',
-  'https://example.com/sky_nx.jpg',
-  'https://example.com/sky_py.jpg',
-  'https://example.com/sky_ny.jpg',
-  'https://example.com/sky_pz.jpg',
-  'https://example.com/sky_nz.jpg',
-]);
-scene.background = skybox;
+  <script>
+    let scene, camera, renderer, plane, planeModel;
+    let controls, planePhysics;
+    let speed = 0, altitude = 0, pitch = 0, roll = 0, yaw = 0;
+    let fuel = 100, engineTemp = 75;
+    let keyState = {};
 
-// Detailed Plane model (replace with .glb or .obj for a real aircraft model)
-const loader = new THREE.GLTFLoader();
-loader.load('https://example.com/airplane_model.glb', function(gltf) {
-  const plane = gltf.scene;
-  scene.add(plane);
-  plane.position.set(0, 5, 20);
-});
+    // Set up scene, camera, and renderer
+    function init() {
+      scene = new THREE.Scene();
+      camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+      renderer = new THREE.WebGLRenderer();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
 
-// Terrain with Perlin noise (simple implementation, use noise library for full effect)
-const terrainTexture = new THREE.TextureLoader().load('https://example.com/terrain_texture.jpg');
-const terrainGeometry = new THREE.PlaneGeometry(2000, 2000, 200, 200);
-terrainGeometry.rotateX(-Math.PI / 2);
-const terrainMaterial = new THREE.MeshStandardMaterial({ map: terrainTexture });
-const terrain = new THREE.Mesh(terrainGeometry, terrainMaterial);
-terrain.position.y = -50;
-scene.add(terrain);
+      // Load a 3D aircraft model
+      const loader = new THREE.GLTFLoader();
+      loader.load('path/to/your/aircraft/model.glb', function(gltf) {
+        planeModel = gltf.scene;
+        planeModel.scale.set(1, 1, 1); // Scale model to fit the scene
+        scene.add(planeModel);
+      });
 
-// Water with transparency
-const waterGeometry = new THREE.PlaneGeometry(2000, 2000);
-const waterMaterial = new THREE.MeshPhongMaterial({
-  color: 0x001e0f,
-  transparent: true,
-  opacity: 0.8,
-  shininess: 100,
-});
-const water = new THREE.Mesh(waterGeometry, waterMaterial);
-water.rotation.x = -Math.PI / 2;
-water.position.y = -0.5;
-scene.add(water);
+      // Set up the camera
+      camera.position.z = 10;
 
-// Lighting (with dynamic sun)
-const ambientLight = new THREE.AmbientLight(0x555555, 0.5);
-scene.add(ambientLight);
-const directionalLight = new THREE.DirectionalLight(0xffffff, 1);
-directionalLight.position.set(10, 50, 10);
-scene.add(directionalLight);
+      // Lighting
+      const light = new THREE.DirectionalLight(0xffffff, 1);
+      light.position.set(5, 10, 5).normalize();
+      scene.add(light);
 
-// Camera (smooth transition between views)
-let cameraMode = 'follow'; // options: 'follow', 'cockpit', 'free'
-camera.position.set(0, 5, 20);
+      // Event listeners for controls
+      window.addEventListener('keydown', handleKeydown);
+      window.addEventListener('keyup', handleKeyup);
 
-// Flight physics variables
-let speed = 0.1;
-let lift = 0;
-let drag = 0.01;
-let thrust = 0.02;
-let gravity = -0.005;
-let verticalSpeed = 0;
-let pitch = 0;
-let roll = 0;
-let yaw = 0;
-let windSpeed = 0.05; // Simulated wind speed
+      // Touch control events
+      setupTouchControls();
 
-// HUD Elements
-const hudSpeed = document.getElementById('speed');
-const hudAltitude = document.getElementById('altitude');
-const hudPitch = document.getElementById('pitch');
-const hudRoll = document.getElementById('roll');
-const hudYaw = document.getElementById('yaw');
+      // Start the animation loop
+      animate();
+    }
 
-function updateHUD() {
-  hudSpeed.textContent = speed.toFixed(2);
-  hudAltitude.textContent = plane.position.y.toFixed(2);
-  hudPitch.textContent = pitch.toFixed(2);
-  hudRoll.textContent = roll.toFixed(2);
-  hudYaw.textContent = yaw.toFixed(2);
-}
+    // Update the flight physics and aircraft position
+    function updatePhysics() {
+      // Adjust physics based on key presses or touch controls
+      if (keyState['ArrowUp']) pitch += 0.05;
+      if (keyState['ArrowDown']) pitch -= 0.05;
+      if (keyState['ArrowLeft']) roll -= 0.05;
+      if (keyState['ArrowRight']) roll += 0.05;
+      if (keyState['w']) { speed += 0.1; altitude += 0.05; }
+      if (keyState['s']) { speed -= 0.1; altitude -= 0.05; }
 
-function updatePhysics() {
-  // Update aerodynamics
-  lift = speed * 0.02;
-  verticalSpeed += lift + gravity;
+      // Apply fuel consumption
+      if (speed > 0) {
+        fuel -= speed * 0.002;
+        if (fuel < 0) fuel = 0;
+      }
 
-  // Apply wind effect
-  speed += windSpeed * Math.sin(yaw);
+      // Update the engine temperature based on speed
+      engineTemp = Math.min(100, engineTemp + (speed * 0.05));
 
-  // Update position
-  plane.position.y += verticalSpeed;
-  if (plane.position.y < 0.1) {
-    plane.position.y = 0.1;
-    verticalSpeed = 0;
-  }
+      // Apply physics to plane model (rotation and translation)
+      planeModel.rotation.x = pitch;
+      planeModel.rotation.y = roll;
+      planeModel.rotation.z = yaw;
 
-  // Update rotation
-  plane.rotation.x = pitch;
-  plane.rotation.z = roll;
-  plane.rotation.y += yaw;
-}
+      // Update the HUD data
+      updateHUD();
+    }
 
-function handleKeyDown(event) {
-  switch (event.key) {
-    case 'ArrowUp': // Increase thrust
-      speed += thrust;
-      break;
-    case 'ArrowDown': // Decrease thrust
-      speed -= thrust;
-      if (speed < 0) speed = 0;
-      break;
-    case 'ArrowLeft': // Yaw left
-      yaw = 0.01;
-      break;
-    case 'ArrowRight': // Yaw right
-      yaw = -0.01;
-      break;
-    case 'w': // Pitch up
-      pitch -= 0.01;
-      break;
-    case 's': // Pitch down
-      pitch += 0.01;
-      break;
-    case 'a': // Roll left
-      roll += 0.01;
-      break;
-    case 'd': // Roll right
-      roll -= 0.01;
-      break;
-  }
-}
+    // Update the heads-up display (HUD)
+    function updateHUD() {
+      document.getElementById('speed').textContent = Math.round(speed);
+      document.getElementById('altitude').textContent = Math.round(altitude);
+      document.getElementById('pitch').textContent = Math.round(pitch * 180 / Math.PI);
+      document.getElementById('roll').textContent = Math.round(roll * 180 / Math.PI);
+      document.getElementById('yaw').textContent = Math.round(yaw * 180 / Math.PI);
+      document.getElementById('fuel').textContent = Math.round(fuel) + '%';
+      document.getElementById('engine-temp').textContent = Math.round(engineTemp) + '°C';
+    }
 
-function handleKeyUp(event) {
-  if (['ArrowLeft', 'ArrowRight'].includes(event.key)) yaw = 0;
-  if (['a', 'd'].includes(event.key)) roll = 0;
-  if (['w', 's'].includes(event.key)) pitch = 0;
-}
+    // Handle key down events for controlling the aircraft
+    function handleKeydown(event) {
+      keyState[event.key] = true;
+    }
 
-window.addEventListener('keydown', handleKeyDown);
-window.addEventListener('keyup', handleKeyUp);
+    // Handle key up events
+    function handleKeyup(event) {
+      keyState[event.key] = false;
+    }
 
-// Animation loop
-function animate() {
-  requestAnimationFrame(animate);
+    // Setup touch controls for iPad (or mobile)
+    function setupTouchControls() {
+      const pitchUpButton = document.getElementById('pitch-up');
+      const pitchDownButton = document.getElementById('pitch-down');
+      const rollLeftButton = document.getElementById('roll-left');
+      const rollRightButton = document.getElementById('roll-right');
+      const thrustUpButton = document.getElementById('thrust-up');
+      const thrustDownButton = document.getElementById('thrust-down');
 
-  // Update physics and HUD
-  updatePhysics();
-  updateHUD();
+      // Mobile touch controls
+      pitchUpButton.addEventListener('touchstart', () => { pitch += 0.05; });
+      pitchDownButton.addEventListener('touchstart', () => { pitch -= 0.05; });
+      rollLeftButton.addEventListener('touchstart', () => { roll -= 0.05; });
+      rollRightButton.addEventListener('touchstart', () => { roll += 0.05; });
+      thrustUpButton.addEventListener('touchstart', () => { speed += 0.1; altitude += 0.05; });
+      thrustDownButton.addEventListener('touchstart', () => { speed -= 0.1; altitude -= 0.05; });
 
-  // Camera logic based on mode
-  if (cameraMode === 'follow') {
-    camera.position.set(plane.position.x - 10 * Math.sin(plane.rotation.y), plane.position.y + 5, plane.position.z - 10 * Math.cos(plane.rotation.y));
-  } else if (cameraMode === 'cockpit') {
-    camera.position.set(plane.position.x, plane.position.y + 1, plane.position.z + 5);
-    camera.rotation.set(plane.rotation.x, plane.rotation.y, plane.rotation.z);
-  }
+      // Reset controls on touchend
+      pitchUpButton.addEventListener('touchend', () => { pitch = 0; });
+      pitchDownButton.addEventListener('touchend', () => { pitch = 0; });
+      rollLeftButton.addEventListener('touchend', () => { roll = 0; });
+      rollRightButton.addEventListener('touchend', () => { roll = 0; });
+      thrustUpButton.addEventListener('touchend', () => { speed = 0; });
+      thrustDownButton.addEventListener('touchend', () => { speed = 0; });
+    }
 
-  camera.lookAt(plane.position);
-  renderer.render(scene, camera);
-}
+    // Animation loop
+    function animate() {
+      requestAnimationFrame(animate);
+      updatePhysics();  // Update physics based on controls and conditions
+      renderer.render(scene, camera);
+    }
 
-animate();
-</script>
+    // Initialize the simulator
+    init();
+  </script>
 </body>
 </html>
